<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/frame_main_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />

    <RelativeLayout
        android:id="@+id/frame_main_footer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25" >

        <TextView
            android:id="@+id/label_main_networks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:text="@string/label_networks"
            android:textAppearance="@style/Text.Label" />

        <TextView
            android:id="@+id/text_main_networks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/label_main_networks"
            android:layout_alignBaseline="@+id/label_main_networks"
            android:text="@string/filler_count" />

        <TextView
            android:id="@+id/text_main_readings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/label_main_networks"
            android:layout_alignParentRight="true"
            android:text="@string/filler_count" />

        <TextView
            android:id="@+id/label_main_readings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/text_main_readings"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/text_main_readings"
            android:text="@string/label_readings"
            android:textAppearance="@style/Text.Label" />

    </RelativeLayout>

</LinearLayout>
